# network-search

./: .dockerignore  .gitignore  Dockerfile  README.md  config-example.yml
src/backend/: cli.py  main.py  pyproject.toml
src/backend/libs/: common.py  config.py  db.py
src/backend/libs/network/: __init__.py  cisco_nxos.py  juniper.py  paloalto_panos.py
src/backend/routes/v1/: __init__.py
src/backend/schemas/: network.py
src/frontend/: .env.example  package-lock.json  package.json  vue.config.js
src/frontend/public/: index.html
src/frontend/src/: App.vue  main.js
src/frontend/src/assets/scss/: main.scss
